# mangajouka

./: README.md
client/: package-lock.json  package.json
client/src/: app.html  app.postcss
client/src/lib/: FilterModal.svelte  Manga.svelte  Sidebar.svelte  store.js
client/src/routes/: +layout.svelte  +page.svelte  +page.ts
client/src/routes/login/: +page.svelte
client/src/routes/register/: +page.svelte
server/: .env  Cargo.toml  configuration.yaml
server/migrations/: 20230730033354_setup.sql  systemctl stop docker
server/scripts/: init_db.sh
server/src/: configuration.rs  health_check.rs  main.rs  manga.rs  router.rs  user.rs
server/src/mangadex/: client.rs  common.rs  mod.rs
