[package]
name = "mangajouka-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", features = ["form"] }
axum-error = "0.2.0"
bytes = "1.4.0"
dotenv = "0.15.0"
reqwest = "0.11.18"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors", "trace"] }
uuid = { version = "1.4.1", features = ["serde"] }
